--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Web VR</title>
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
-    <meta name="mobile-web-app-capable"
-          content="yes">
-    <meta name="apple-mobile-web-app-capable"
-          content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style"
-          content="black-translucent"/>
-    <link rel="stylesheet"
-          type="text/css"
-          href="styles/index.css">
+      <title>Web VR</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
+      <meta name="mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+      <link rel="stylesheet" type="text/css" href="styles/index.css">
 </head>
+
 <body>
-<div id="ui">
-    <div id="vr-button"></div>
-    <a id="magic-window"
-       href="#">Try it without a headset</a>
-</div>
+      <button id="submit">Start</button>
+      <div id="setup"></div>
+      <div id="ui">
+            <div id="vr-button"></div>
+            <a id="magic-window" href="#">Try it without a headset</a>
+      </div>
 </body>
 <!--
    Base configuration for the VR app
@@ -50,6 +47,8 @@
   A set of UI controls for entering VR mode.
 -->
 <script src="libs/vendor/vr/webvr-ui.min.js"></script>
+
+<script src="libs/app/ui.js"></script>
 
 <script src="libs/app/game.js"></script>
 
